tests/data/parseerror/invalid-constant-3.php
<?php

const INVALID_CONSTANT_3;
